[BTAT-7274] - corrected css for contrast issue

--- a/public/stylesheets/focus.css
+++ b/public/stylesheets/focus.css
@@ -89,3 +89,7 @@ textarea:focus {
     -webkit-box-shadow: inset 0 0 0 2px;
     box-shadow: inset 0 0 0 2px;
 }
+
+.money-input-padding {
+    padding-left:1em;
+}
